Fix : header css z-index 제거

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -2,10 +2,6 @@
   position: relative;
 }
 
-.header {
-  z-index: 100;
-}
-
 .header-container {
   position: relative;
 }
